:lipstick: add background

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Tools for Good Works</title>
 <head>
  <meta charset="UTF-8">
   <title>Tools for Good Works</title>
@@ -15,7 +15,7 @@
     <div class="conta">
         <div class="bl-main" id="bl-main">
             <section>
-                <div class="bl-box">
+                <div class="bl-box box-1">
                     <h2>Rule of Saint Benedict Chapter 4</h2>
                 </div>
 
@@ -27,7 +27,7 @@
             </section>
 
             <section>
-                <div class="bl-box">
+                <div class="bl-box box-2">
                     <h2>God's Most Important Commandment</h2>
                 </div>
 
@@ -39,7 +39,7 @@
             </section>
 
             <section>
-                <div class="bl-box">
+                <div class="bl-box box-3">
                     <h2>Fear the Lord Our God</h2>
                 </div>
 
