:bug: add class for remaining titles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			<!-- FOR BLOG SECTION -->
             <section id="bl-work-section">
-                <div class="bl-box">
+                <div class="bl-box box-4">
                     <h2>Blog</h2>
                 </div>
 
@@ -68,7 +68,7 @@
 			
 			<!-- FOR REFERENCE SECTION -->
             <section>
-                <div class="bl-box">
+                <div class="bl-box box-5">
                     <h2>Reference</h2>
                 </div>
 
